--- a/src/teaeli/DeliverBlend.form
+++ b/src/teaeli/DeliverBlend.form
@@ -76,7 +76,7 @@
                       </Group>
                       <Component id="blendCatgLbl" min="-2" max="-2" attributes="0"/>
                       <Component id="blendNameLbl" min="-2" max="-2" attributes="0"/>
-                      <Component id="allocatedQtyLabel" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="allocatedQtyLbl" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="freeQtyLbl" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
                           <Component id="deliverQtyTxt" min="-2" pref="200" max="-2" attributes="0"/>
@@ -98,7 +98,7 @@
                           <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace pref="33" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -118,7 +118,7 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="allocatedQty" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                      <Component id="allocatedQtyLabel" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                      <Component id="allocatedQtyLbl" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -200,7 +200,7 @@
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JLabel" name="allocatedQtyLabel">
+        <Component class="javax.swing.JLabel" name="allocatedQtyLbl">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="0"/>
@@ -297,7 +297,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Allocate to free stock ?"/>
+            <Property name="text" type="java.lang.String" value="Allocate left to free stock ?"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="unallocateQtyTxt">
@@ -314,7 +314,6 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="unAllocatingQtyTypeCombo">
           <Properties>
-            <Property name="editable" type="boolean" value="true"/>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="0"/>
             </Property>
@@ -385,6 +384,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Cancel"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cancelBtnActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
@@ -396,6 +398,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Deliver"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="deliverBtnActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
