--- a/src/teaeli/OrderConfirmation.form
+++ b/src/teaeli/OrderConfirmation.form
@@ -214,6 +214,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Generate PDF"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="generatePdfBtnActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
