--- a/src/teaeli/CreateNewBlendOrder2.form
+++ b/src/teaeli/CreateNewBlendOrder2.form
@@ -169,7 +169,7 @@
             <Component class="javax.swing.JTable" name="masterPlanTbl">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="8" rowCount="0">
+                  <Table columnCount="9" rowCount="0">
                     <Column editable="false" title="Ingredient" type="java.lang.Object"/>
                     <Column editable="false" title="Qty Required (g)" type="java.lang.Object"/>
                     <Column editable="false" title="Visible Stock (g)" type="java.lang.Object"/>
@@ -178,6 +178,7 @@
                     <Column editable="false" title="Excess Qty (g)" type="java.lang.Object"/>
                     <Column editable="true" title="Final Qty (g)" type="java.lang.Object"/>
                     <Column editable="false" title="Supplier Name" type="java.lang.Object"/>
+                    <Column editable="false" title="category" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -197,7 +198,7 @@
                       <Editor/>
                       <Renderer/>
                     </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="80" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
@@ -207,7 +208,7 @@
                       <Editor/>
                       <Renderer/>
                     </Column>
-                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="55" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
@@ -218,6 +219,11 @@
                       <Renderer/>
                     </Column>
                     <Column maxWidth="-1" minWidth="-1" prefWidth="230" resizable="false">
+                      <Title/>
+                      <Editor/>
+                      <Renderer/>
+                    </Column>
+                    <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="false">
                       <Title/>
                       <Editor/>
                       <Renderer/>
